--- a/themes/hugo-lithium-theme/layouts/partials/footer.html
+++ b/themes/hugo-lithium-theme/layouts/partials/footer.html
@@ -10,7 +10,8 @@
       </footer>
 
     </div>
-
+	<!---add vimeo.js even tracking code -->
+	<script src="/js/vimeo.ga.min.js"></script>
     {{ template "_internal/google_analytics.html" . }}
   </body>
 </html>
