--- a/themes/hugo-lithium-theme/layouts/partials/footer.html
+++ b/themes/hugo-lithium-theme/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 
     </div>
 	<!---add vimeo.js even tracking code -->
-	<script src="/js/vimeo.ga.min.js"></script>
+	<script src="vietnam/docs/js/vimeo.ga.min.js"></script>
     {{ template "_internal/google_analytics.html" . }}
   </body>
 </html>
