--- a/themes/hugo-lithium-theme/layouts/partials/footer.html
+++ b/themes/hugo-lithium-theme/layouts/partials/footer.html
@@ -10,8 +10,10 @@
       </footer>
 	  
     </div>
-	<!---add vimeo.js even tracking code -->
-	<script src="js/vimeo.ga.min.js"></script>
+	
     {{ template "_internal/google_analytics.html" . }}
+	<!---add vimeo.js even tracking code -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+	<script src="js/vimeo.ga.min.js"></script>	
   </body>
 </html>
