--- a/themes/hugo-lithium-theme/layouts/_default/single.html
+++ b/themes/hugo-lithium-theme/layouts/_default/single.html
@@ -21,5 +21,7 @@
   {{ template "_internal/disqus.html" . }}
 
 </main>
-
+	<!---add vimeo.js even tracking code -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+	<script src="js/vimeo.ga.min.js"></script>	
 {{ partial "footer.html" . }}
