--- a/themes/hugo-lithium-theme/layouts/_default/single.html
+++ b/themes/hugo-lithium-theme/layouts/_default/single.html
@@ -17,11 +17,10 @@
       {{ .Content }}
     </div>
   </article>
+ {{ partial "share-links.html" . }}
+ {{ template "_internal/disqus.html" . }}
+  </main>
+ 
 
-  {{ template "_internal/disqus.html" . }}
-
-</main>
-	<!---add vimeo.js even tracking code -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-	<script src="js/vimeo.ga.min.js"></script>	
 {{ partial "footer.html" . }}
+
