--- a/themes/hugo-lithium-theme/static/css/main.css
+++ b/themes/hugo-lithium-theme/static/css/main.css
@@ -13,6 +13,22 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.iframe-container iframe {
+  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+
 h1,
 h2,
 h3,
