--- a/themes/hugo-lithium-theme/layouts/partials/share-links.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-links.html
@@ -1,5 +1,5 @@
-{{ $pageurl := .Page.URL }}
-{{ $siteurl := .Site. }}
+{{ $pageurl :=  }}
+{{ $siteurl := .Site.BaseURL }}
 
 <style>
 #share-buttons {display: inline-block; vertical-align: middle; }
