--- a/themes/hugo-lithium-theme/layouts/partials/share-links.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-links.html
@@ -1,4 +1,5 @@
-{{ $siteurl := .BaseURL }}
+
+{{ $siteurl := .Site.BaseURL }}
 
 <style>
 #share-buttons {display: inline-block; vertical-align: middle; }
