--- a/themes/hugo-lithium-theme/layouts/index.html
+++ b/themes/hugo-lithium-theme/layouts/index.html
@@ -18,7 +18,8 @@
     {{ end }}
     {{ end }}
   </div>
-{{ partial "share-links.html" . }}
+  
+{{ partial "share-menu" . }}
 
 </main>
 {{ partial "footer.html" . }}
