facebook share button

--- a/themes/hugo-lithium-theme/layouts/partials/head.html
+++ b/themes/hugo-lithium-theme/layouts/partials/head.html
@@ -30,6 +30,7 @@
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="icon" href="{{ .Site.BaseURL }}images/{{ .Site.Params.icon.url }}" type="image/x-icon"/>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
