--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,11 +1,11 @@
-<!-- Facebook -->
-{{ if .Site.Params.socialShareFacebook | default true}}
+{{ $url := printf "%s" .Permalink | absLangURL }}
+
+<div id="share">
+	<!-- facebook -->
+	<a class="facebook" href="https://www.facebook.com/share.php?u={{ $url }}" target="blank">
+	<i class="fab fa-facebook fa-8x"></i>
+	</a>
+</div>
 
 
-<li>
-  <a href="//www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" class="share-btn facebook">
-    <i class="fa fa-facebook"></i>
-	 <p>Facebook</p>
-    </a>
-</li>
-{{ end }}
+
