--- a/themes/hugo-lithium-theme/layouts/partials/head.html
+++ b/themes/hugo-lithium-theme/layouts/partials/head.html
@@ -39,6 +39,21 @@
   gtag('config', 'UA-134609366-1');
 </script>
 
+<script>
+/**
+* Function that tracks a click on an outbound link in Analytics.
+* This function takes a valid URL string as an argument, and uses that URL string
+* as the event label. Setting the transport method to 'beacon' lets the hit be sent
+* using 'navigator.sendBeacon' in browser that support it.
+*/
+var trackOutboundLink = function(url) {
+   ga('send', 'event', 'outbound', 'click', url, {
+     'transport': 'beacon',
+     'hitCallback': function(){document.location = url;}
+   });
+}
+</script>
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="icon" href="{{ .Site.BaseURL }}images/{{ .Site.Params.icon.url }}" type="image/x-icon"/>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
