--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -2,7 +2,10 @@
 
 <div id="share">
 	<!-- facebook -->
-	<a class="facebook" href="https://www.facebook.com/share.php?u={{ $url }}" target="blank">
+	<a class="facebook" href="https://www.facebook.com/share.php?u={{ $url }}"
+		onclick="trackOutboundLink('https://www.facebook.com/share.php?u={{ $url }}')
+		;return false;">https://www.facebook.com/share.php?u={{ $url }}<
+		target="blank">
 	<i class="fab fa-facebook fa-8x"></i>
 	</a>
 </div>
