--- a/themes/hugo-lithium-theme/layouts/partials/header.html
+++ b/themes/hugo-lithium-theme/layouts/partials/header.html
@@ -7,31 +7,6 @@
     <div class="wrapper">
       <header class="header">
         {{ partial "nav.html" . }}
-		
-		<!-- Global Site Tag (gtag.js) - Google Analytics UA-134609366-1 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134609366-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-134609366-1');
-</script>
-
-<script>
-/**
-* Function that tracks a click on an outbound link in Analytics.
-* This function takes a valid URL string as an argument, and uses that URL string
-* as the event label. Setting the transport method to 'beacon' lets the hit be sent
-* using 'navigator.sendBeacon' in browser that support it.
-*/
-var trackOutboundLink = function(url) {
-  gtag('event', 'clic', {
-    'event_category': 'saliente',
-    'event_label': url,
-    'transport_type': 'beacon',
-    'event_callback': function(){document.location = url;}
-  });
-}
-
+{{ template "_internal/google_analytics.html" . }}
 </script>
       </header>
