--- a/themes/hugo-lithium-theme/layouts/index.html
+++ b/themes/hugo-lithium-theme/layouts/index.html
@@ -19,7 +19,7 @@
     {{ end }}
   </div>
   
-{{ partial "share-menu" . }}
+{{ partial "share-buttons" . }}
 
 </main>
 {{ partial "footer.html" . }}
