--- a/themes/hugo-lithium-theme/layouts/partials/share-menu.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-menu.html
@@ -2,7 +2,7 @@
     <section id="social-share-nav">
         <ul class="links">
             <header>
-                <h3>Share this video on ...</h3>
+                <h3>Share this video on:</h3>
             </header>
             {{ partial "share-buttons" . }}
         </ul>
