--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,9 +1,6 @@
 {{ $url := printf "%s" .Permalink | absLangURL }}
 
-<div id="share">
-	<!-- facebook -->
-	<a class="facebook"
-	href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank">
-	<i class="fab fa-facebook fa-8x"></i>
-	</a>
-</div>
+	<header>
+		<h3>Share this video on:</h3>
+	</header>
+<a href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank">Facebook</a>
