--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -3,6 +3,6 @@
 	<header>
 		<h3>Share this video on:</h3>
 	</header>
-<a href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank">Facebook
+<a href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank"
 onclick="trackOutboundLink('Share', 'click', 'Facebook');"
-</a>
+>Facebook</a>
