--- a/themes/hugo-lithium-theme/layouts/partials/head.html
+++ b/themes/hugo-lithium-theme/layouts/partials/head.html
@@ -35,6 +35,11 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
 
+
+<!---add vimeo.js even tracking code -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+	<script src="js/vimeo.ga.min.js"></script>
+	
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134609366-1"></script>
 <script>
