--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,6 +1,6 @@
 {{ $url := printf "%s" .Permalink | absLangURL }}
 
 	<header>
-		<h3>Share this video on:</h3>
+		<h3>Share this video on</h3>
 	</header>
 <a href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank">Facebook</a>
