--- a/themes/hugo-lithium-theme/layouts/partials/header.html
+++ b/themes/hugo-lithium-theme/layouts/partials/header.html
@@ -4,10 +4,14 @@
     {{ partial "head.html" . }}
   </head>
   <body>
+  
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RD2SGD"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+<div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v3.2"></script>
 
     <div class="wrapper">
       <header class="header">
