--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,6 +1,5 @@
-{{ $url := printf "%s" .Permalink | absLangURL }}
-
 	<header>
 		<h3>Share this video on:</h3>
 	</header>
-<a href="https://www.facebook.com/share.php?u={{ $url }}" target="_blank">Facebook</a>
+
+<div class="fb-like" data-href="https://sustuseumr.github.io/vietnam/" data-width="32" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
