--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,5 +1,5 @@
 	<header>
-		<h3>Share this video on:</h3>
+		<h3>Share and like:</h3>
 	</header>
 
 <div class="fb-like" data-href="https://sustuseumr.github.io/vietnam/" data-width="32" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
