--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,6 +1,6 @@
 	<header>
-		<h3>Share on facebook:<h3>
+		<h3>Share on facebook:<h3> 
 	</header>
-
-
-<div class="fb-share-button" data-href="https://sustuseumr.github.io/vietnam/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsustuseumr.github.io%2Fvietnam%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"></a></div>
+    <a href="http://www.facebook.com/sharer.php?u=https://sustuseumr.github.io/vietnam/" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+    </a>	
