--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,6 +1,3 @@
-	<header>
-		<h3>Share on facebook:<h3> 
-	</header>
-    <a href="http://www.facebook.com/sharer.php?u=https://sustuseumr.github.io/vietnam/" target="_blank">
-        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-    </a>	
+
+<i class="fab fa-facebook-square fa-2x"></i>
+<a href="#" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://sustuseumr.github.io/vietnam/'+encodeURIComponent(location.href),'facebook-share-dialog','width=626,height=436');return false;">Share on Facebook</a>
