--- a/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
+++ b/themes/hugo-lithium-theme/layouts/partials/share-buttons.html
@@ -1,2 +1,2 @@
 <i class="fab fa-facebook-square fa-2x"></i>
-<a href="#" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://sustuseumr.github.io/vietnam/'+encodeURIComponent(location.href),'facebook-share-dialog','width=626,height=436');return false;">Share on Facebook</a>
+<a href="https://sustuseumr.github.io/vietnam/" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://sustuseumr.github.io/vietnam/'+encodeURIComponent(location.href),'facebook-share-dialog','width=626,height=436');return false;">Share on Facebook</a>
