--- a/themes/hugo-lithium-theme/layouts/_default/single.html
+++ b/themes/hugo-lithium-theme/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+{{ partial "nav.html" . }}
 
 <main class="content" role="main">
 
@@ -18,7 +19,6 @@
     </div>
   </article>
 
- {{ template "_internal/disqus.html" . }}
   </main>
  
 
