--- a/themes/hugo-lithium-theme/layouts/index.html
+++ b/themes/hugo-lithium-theme/layouts/index.html
@@ -2,24 +2,16 @@
 
 <main class="content" role="main">
 
-  <div class="archive">
-    {{ range (where .Data.Pages "Type" "post").GroupByDate "2006" }}
-    <h2 class="archive-title">{{ .Key }}</h2>
-    {{ range .Pages }}
-    <article class="archive-item">
-      <a href="{{ .Permalink }}" class="archive-item-link">{{ .Title }}</a>
-      <span class="archive-item-date">
-        {{ .Date.Format "January 2, 2006" }}
-      </span>
-	  <div class="article-content">
-      {{ .Content }}
-    </div>
-    </article>
-    {{ end }}
-    {{ end }}
-  </div>
-  
-{{ partial "share-buttons" . }}
+  <body>
 
+	<h1>Welcome!</h1>
+
+		<p>Here you will read a description of the project in the future.
+		You can  learn more about the research we do on our 
+		<a href="https://www.uni-marburg.de/en/fb02/research-groups/economics/sustuse" target="_blank" >homepage</a>
+		</p>
+
+	</body>
+  
 </main>
 {{ partial "footer.html" . }}
