--- a/themes/hugo-lithium-theme/static/css/main.css
+++ b/themes/hugo-lithium-theme/static/css/main.css
@@ -85,15 +85,17 @@ img {
 }
 
 .nav-links {
-  margin: 0;
+ float: right;
+  margin-right: 100px;
   padding: 0;
-  font-size: 14px;
+  font-size: 10px;
   list-style: none;
 }
 
 .nav-links li {
-  display: inline-block;
-  margin: 0 0 0 15px;
+	font-size: 25px;
+	display: inline-block;
+	margin: 0 0 0 10px;
 }
 
 .nav-links li:first-child {
