--- a/themes/hugo-lithium-theme/layouts/index.html
+++ b/themes/hugo-lithium-theme/layouts/index.html
@@ -6,9 +6,8 @@
 
 	<h1>Welcome!</h1>
 
-		<p>Here you will read a description of the project in the future.
-		You can  learn more about the research we do on our 
-		<a href="https://www.uni-marburg.de/en/fb02/research-groups/economics/sustuse" target="_blank" >homepage</a>
+		<p> If you want to learn more about the research we do, please visit our 
+		<a href="https://www.uni-marburg.de/en/fb02/research-groups/economics/sustuse" target="_blank" >homepage</a>.
 		</p>
 
 	</body>
